<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/top_bar_middle"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="2dip" >

        <TextView
            android:id="@+id/backtoMainButton"
            android:layout_width="60dip"
            android:layout_height="35dip"
            android:layout_gravity="center_vertical"
            android:background="@drawable/top_bar_back"
            android:gravity="center_vertical"
            android:paddingLeft="20dip"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="15sp" >
        </TextView>

        <TextView
            android:layout_width="80dip"
            android:layout_height="50dip"
            android:layout_gravity="center_vertical|center"
            android:gravity="center"
            android:text="@string/more_settings"
            android:textColor="#000000"
            android:textSize="19sp" >
        </TextView>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/edit_background" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical|left"
            android:text="@string/moreuse"
            android:textColor="#009999"
            android:textSize="15sp"
            android:background="@drawable/tab_bar" />

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/note"
            android:textSize="20sp"
            android:clickable="true"
            android:textColor="#058"
            android:onClick="click_note" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical|left"
            android:text="@string/about_app"
            android:textColor="#009999"
            android:textSize="15sp"
            android:background="@drawable/tab_bar" />
        <TextView
            android:id="@+id/about_revision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/revision"
            android:textSize="20sp"
            android:clickable="true"
            android:textColor="#058" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp" />
        <TextView
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/about"
            android:textSize="20sp"
            android:clickable="true"
            android:textColor="#058"/>
    </LinearLayout>
</LinearLayout>